--- a/IncomeStatement/IncomeStatement.csproj
+++ b/IncomeStatement/IncomeStatement.csproj
@@ -106,14 +106,15 @@
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="WebData\BundleResult\Login\IS_20190929_min_v1.js" />
-    <Content Include="WebData\BundleResult\Login\IS_20190929_min_v1_CSS.css" />
-    <Content Include="WebData\BundleResult\Main\IS_20190929_min_v1.js" />
-    <Content Include="WebData\BundleResult\Main\IS_20190929_min_v1_CSS.css" />
+    <Content Include="WebData\BundleResult\Login\IS_20191020_min_v1.js" />
+    <Content Include="WebData\BundleResult\Login\IS_20191020_min_v1_CSS.css" />
+    <Content Include="WebData\BundleResult\Main\IS_20191020_min_v1.js" />
+    <Content Include="WebData\BundleResult\Main\IS_20191020_min_v1_CSS.css" />
     <Content Include="WebData\CSS\External\googlefont.css" />
     <Content Include="WebData\Picture\error_message.png" />
     <Content Include="WebData\Picture\icon\material-io\baseline_add_circle_black_48dp.png" />
     <Content Include="WebData\Picture\icon\material-io\baseline_delete_forever_black_48dp.png" />
+    <Content Include="WebData\Picture\icon\material-io\baseline_edit_black_48dp.png" />
     <Content Include="WebData\Picture\icon\material-io\sharp_arrow_drop_down_black_48dp.png" />
     <Content Include="WebData\Picture\loading.gif" />
     <Content Include="WebData\Picture\login\bottom_wave.png" />
