修正 此次修改

--- a/IncomeStatement/Web.config
+++ b/IncomeStatement/Web.config
@@ -36,6 +36,10 @@
       <error statusCode="500" prefixLanguageFilePath="" path="Error.html" responseMode="File"/>
     </httpErrors>
   </system.webServer>
+  <appSettings>
+    <add key="ReportUrl" value="http://oas.stat.ntpc.gov.tw:8000"/>
+    <add key="TableauKey" value="TAB"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
